--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </div>
                 <div class="row animate__animated animated-element-2 animate__slideInLeft" style="opacity: 1;">
                     <div class="col text-center">
-                        <a href="projects/index.html" class="btn btn-custom rounded-pill mt-3">View All Projects</a>
+                        <a href="portfolio.html" class="btn btn-custom rounded-pill mt-3">View All Projects</a>
                     </div>
                 </div>
             </div>
