--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <section class="container-fluid bg-texture-1 py-4">
             <div class="container mb-4">
-                <a href="projects.html?id=1" class="text-decoration-none">
+                <a href="portfolio.html" class="text-decoration-none">
                     <div class="featured-container animate__animated animated-element-1 animate__fadeInUp"
                         style="opacity: 1;">
                         <div class="row">
