--- a/about.html
+++ b/about.html
@@ -41,6 +41,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link highlight-bta" href="about.html">About Me</a></li>
                 </ul>
@@ -70,7 +71,7 @@
                 <div class="col-lg-9 bg-light rounded p-5">
                     <p class="lead animate__animated animate__fadeInUp">
                         Mohamed Bakr is deeply passionate about the field of computer science.
-                        He finds joy in both coding and teaching, believing that sharing knowledge helps strengthen
+                        He finds joy in <span class="highlight-bta">coding</span>, <span class="highlight-bta">designing</span>, <span class="highlight-bta">researching</span> and <span class="highlight-bta">teaching</span>, believing that sharing knowledge helps strengthen
                         one’s own understanding.
                     </p>
                     <p class="animate__animated animate__fadeInUp animate__delay-1s">
@@ -161,6 +162,7 @@
                         <div class="skill-item"><i class="fa-brands fa-linux"></i> Linux</div>
                         <div class="skill-item"><span class="fa-ps">Ps</span> Photoshop</div>
                         <div class="skill-item"><i class="fa-solid fa-chart-simple"></i> PowerBI</div>
+                        <div class="skill-item"><i class="fa-solid fa-tachometer-alt"></i> JMeter</div>
                         <div class="skill-item"><i class="fa-solid fa-book-open"></i> Storytelling</div>
                     </div>
                 </div>
@@ -272,8 +274,8 @@
                             <i class="fab fa-linkedin-in"></i>
                         </div>
                         <p class="contact-text ms-3">
-                            <a href="https://eg.linkedin.com/in/mohamed-bakr-702966291"
-                                target="_blank">mohamed-bakr-702966291</a>
+                            <a href="https://www.linkedin.com/in/mohamed-bakr-546b44391/"
+                                target="_blank">mohamed-bakr-546b44391</a>
                         </p>
                     </div>
 
