--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link highlight-bta" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
                 </ul>
@@ -62,12 +63,11 @@
                     </div>
                     <div class="col-lg-9 order-md-1 hero-content animate__animated animate__fadeInRight">
                         <h1 class="hero-title">Hello! I am <span class="highlight-bta">Mohamed Bakr</span></h1>
-                        <p class="hero-sutitle "><span class="bg-dark rounded px-3">Instructor | Developer |
-                                Researcher</span></p>
+                        <p class="hero-sutitle "><span class="bg-dark rounded px-3">Instructor | Developer | Designer</span></p>
+                        <a href="services.html" class="btn btn-custom rounded-pill mt-3"><i
+                                class="fa-solid fa-plus-circle fa-lg me-1"></i> Services</a>
                         <a href="portfolio.html" class="btn btn-custom rounded-pill mt-3"><i
                                 class="fas fa-briefcase fa-lg me-2"></i> Portfolio</a>
-                        <a href="about.html" class="btn btn-custom rounded-pill mt-3"><i
-                                class="fab fa-youtube fa-lg me-1"></i> About Me</a>
                     </div>
                 </div>
             </div>
@@ -115,11 +115,64 @@
 
         </section>
 
+        <!-- Highlighted Teachings Section -->
+<section id="highlighted-teachings" class="container-fluid py-4 section-starter">
+    <div class="text-center">
+        <h2 class="mb-1 section-title animate__animated animate__fadeInUp">Teachings</h2>
+        <p class="mb-0 section-subtitle animate__animated animate__fadeInUp">My strongest courses & expertise</p>
+    </div>
+</section>
+
+<section class="container-fluid py-4 bg-texture-4">
+    <div class="container mb-4">
+        <div class="row animate__animated animate__slideInRight g-4">
+            <!-- Specialty 1 -->
+            <div class="col-lg-3 col-md-6">
+                <div class="card item-card h-100 p-4 text-center" style="border-left:5px solid red">
+                    <h3 class="item-name">Programming & Database</h3>
+                    <p class="item-info">Fundamentals, OOP, SQL, NoSQL, and project implementation.</p>
+                    <p class="item-info"><small>Build robust apps & data solutions</small></p>
+                </div>
+            </div>
+            <!-- Specialty 2 -->
+            <div class="col-lg-3 col-md-6">
+                <div class="card item-card h-100 p-4 text-center" style="border-left:5px solid red">
+                    <h3 class="item-name">Software Engineering</h3>
+                    <p class="item-info">Requirements, UML, system design, and documentation.</p>
+                    <p class="item-info"><small>Turn ideas into structured projects</small></p>
+                </div>
+            </div>
+            <!-- Specialty 3 -->
+            <div class="col-lg-3 col-md-6">
+                <div class="card item-card h-100 p-4 text-center" style="border-left:5px solid red">
+                    <h3 class="item-name">Data Mining</h3>
+                    <p class="item-info">Analysis, AI concepts, and practical insights.</p>
+                    <p class="item-info"><small>Extract value from data efficiently</small></p>
+                </div>
+            </div>
+            <!-- Specialty 4 -->
+            <div class="col-lg-3 col-md-6">
+                <div class="card item-card h-100 p-4 text-center" style="border-left:5px solid red">
+                    <h3 class="item-name">Digital Logic</h3>
+                    <p class="item-info">Circuit design, Boolean logic, and fundamentals.</p>
+                    <p class="item-info"><small>Understand how computers operate at the core</small></p>
+                </div>
+            </div>
+        </div>
+        <div class="row animate__animated animate__slideInLeft mt-4">
+            <div class="col text-center">
+                <a href="portfolio.html" class="btn btn-custom rounded-pill mt-3">View All Teachings</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+
         <!-- Title Section -->
         <section id="section-projects" class="container-fluid py-4 section-starter">
             <div class="text-center">
                 <h2 class="mb-1 section-title animate__animated animated-element-1 animate__fadeInUp"
-                    style="opacity: 1;">Projects</h2>
+                    style="opacity: 1;">Software Projects</h2>
                 <p class="mb-0 section-subtitle animate__animated animated-element-1 animate__fadeInUp"
                     style="opacity: 1;">Showcasing Creativity &amp; Innovation</p>
             </div>
@@ -223,8 +276,8 @@
                             <i class="fab fa-linkedin-in"></i>
                         </div>
                         <p class="contact-text ms-3">
-                            <a href="https://eg.linkedin.com/in/mohamed-bakr-702966291"
-                                target="_blank">mohamed-bakr-702966291</a>
+                            <a href="https://www.linkedin.com/in/mohamed-bakr-546b44391/"
+                                target="_blank">mohamed-bakr-546b44391</a>
                         </p>
                     </div>
 
