--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
                     <li class="nav-item"><a class="nav-link highlight-bta" href="portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
                 </ul>
@@ -62,6 +63,111 @@
                         Bakr</span></p>
             </div>
         </section>
+
+        <!-- Section Navigation -->
+<section id="section-nav" class="section-nav bg-light py-2 shadow-sm">
+  <div class="container d-flex flex-wrap justify-content-center gap-3">
+    <a href="#teachings" class="nav-link text-dark fw-semibold">Teachings</a>
+    <a href="#portfolio-web" class="nav-link text-dark fw-semibold">Web Applications</a>
+    <a href="#portfolio-games" class="nav-link text-dark fw-semibold">Video Games</a>
+    <a href="#portfolio-windows" class="nav-link text-dark fw-semibold">Windows Form Applications</a>
+    <a href="#portfolio-graphic" class="nav-link text-dark fw-semibold">Graphic Designs</a>
+  </div>
+</section>
+
+        <!-- Teachings Section -->
+<section id="teachings" class="container my-5">
+  <div class="text-center mb-4">
+    <h2 class="section-title badge rounded-pill bg-warning animate__animated animate__fadeInUp">
+      Teachings
+    </h2>
+    <p class="section-subtitle animate__animated animate__fadeInUp animate__delay-1s">
+      Courses and topics I’ve taught
+    </p>
+  </div>
+
+  <div class="row row-cols-1 row-cols-md-2 g-4 animate__animated animate__fadeInUp">
+    <div class="col">
+      <div class="teaching-item p-3 rounded shadow-sm h-100">
+        <h5 class="fw-bold mb-1">Introduction to Information Systems</h5>
+        <p class="small text-muted mb-0">Overview of information systems concepts, components, and their role in organizations.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="teaching-item p-3 rounded shadow-sm h-100">
+        <h5 class="fw-bold mb-1">Microsoft Office</h5>
+        <p class="small text-muted mb-0">Word, PowerPoint, and Excel.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="teaching-item p-3 rounded shadow-sm h-100">
+        <h5 class="fw-bold mb-1">Programming Fundamentals</h5>
+        <p class="small text-muted mb-0">Introduced core programming logic and algorithms using C++, Java and others.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="teaching-item p-3 rounded shadow-sm h-100">
+        <h5 class="fw-bold mb-1">Object Oriented Programming</h5>
+        <p class="small text-muted mb-0">Covered OOP principles such as encapsulation, inheritance, and polymorphism in C++, Java and others.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="teaching-item p-3 rounded shadow-sm h-100">
+        <h5 class="fw-bold mb-1">Database & Data Warehousing</h5>
+        <p class="small text-muted mb-0">Taught ERD modeling, schema design, SQL/NoSQL queries, and data warehouse concepts.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="teaching-item p-3 rounded shadow-sm h-100">
+        <h5 class="fw-bold mb-1">Web Programming</h5>
+        <p class="small text-muted mb-0">Full-stack PHP + MySQL Track.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="teaching-item p-3 rounded shadow-sm h-100">
+        <h5 class="fw-bold mb-1">Data Mining & Generative AI</h5>
+        <p class="small text-muted mb-0">Introduced data analysis and generative AI techniques using Python, Statistics and Gemini models.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="teaching-item p-3 rounded shadow-sm h-100">
+        <h5 class="fw-bold mb-1">Software Engineering</h5>
+        <p class="small text-muted mb-0">Explored software development life cycle, requirement engineering, UML diagrams, and system analysis & design.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="teaching-item p-3 rounded shadow-sm h-100">
+        <h5 class="fw-bold mb-1">Digital Logic</h5>
+        <p class="small text-muted mb-0">Covered the fundamentals of logic gates, binary arithmetic, and circuit design.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="teaching-item p-3 rounded shadow-sm h-100">
+        <h5 class="fw-bold mb-1">Operating Systems</h5>
+        <p class="small text-muted mb-0">Explained OS principles, process management, memory management and command-line operations on Windows & Linux.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="teaching-item p-3 rounded shadow-sm h-100">
+        <h5 class="fw-bold mb-1">Management Information Systems</h5>
+        <p class="small text-muted mb-0">Focused on how organizations use information systems for decision-making and management.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="teaching-item p-3 rounded shadow-sm h-100">
+        <h5 class="fw-bold mb-1">Quality Assurance in IT</h5>
+        <p class="small text-muted mb-0">Introduced software testing methodologies, QA tools, and process improvement standards.</p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="teaching-item p-3 rounded shadow-sm h-100">
+        <h5 class="fw-bold mb-1">Big Data</h5>
+        <p class="small text-muted mb-0">Introduced distributed data analytics using tools like hadoop and spark.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
         <!-- Web Applications -->
         <section id="portfolio-web" class="container my-5">
@@ -225,6 +331,87 @@
                     href="https://github.com/mfouadbakr" target="_blank" class="highlight-bta">GitHub</a>.</p>
         </section>
 
+        <!-- Graphic Designs -->
+<section id="portfolio-graphic" class="container my-5">
+    <div class="text-center mb-4">
+        <h2 class="section-title badge rounded-pill bg-warning animate__animated animate__fadeInUp">
+            Graphic Designs
+        </h2>
+        <p class="section-subtitle animate__animated animate__fadeInUp animate__delay-1s">
+            Showcasing creative graphic works
+        </p>
+    </div>
+
+    <div class="row g-3">
+        <div class="col-6 col-md-3">
+            <img src="assets/images/portfolio/design-logo-1.png" 
+                 class="img-fluid rounded animate__animated animate__zoomIn" 
+                 alt="Graphic Design 1">
+        </div>
+        <div class="col-6 col-md-3">
+            <img src="assets/images/portfolio/design-logo-2.png" 
+                 class="img-fluid rounded animate__animated animate__zoomIn" 
+                 alt="Graphic Design 2">
+        </div>
+        <div class="col-6 col-md-3">
+            <img src="assets/images/portfolio/design-logo-3.png" 
+                 class="img-fluid rounded animate__animated animate__zoomIn" 
+                 alt="Graphic Design 3">
+        </div>
+        <div class="col-6 col-md-3">
+            <img src="assets/images/portfolio/design-logo-4.png" 
+                 class="img-fluid rounded animate__animated animate__zoomIn" 
+                 alt="Graphic Design 4">
+        </div>
+        <div class="col-6 col-md-3">
+            <img src="assets/images/portfolio/design-ad-1.png" 
+                 class="img-fluid rounded animate__animated animate__zoomIn" 
+                 alt="Graphic Design 4">
+        </div>
+        <div class="col-6 col-md-3">
+            <img src="assets/images/portfolio/design-ad-2.png" 
+                 class="img-fluid rounded animate__animated animate__zoomIn" 
+                 alt="Graphic Design 4">
+        </div>
+        <div class="col-6 col-md-3">
+            <img src="assets/images/portfolio/design-album-1.png" 
+                 class="img-fluid rounded animate__animated animate__zoomIn" 
+                 alt="Graphic Design 4">
+        </div>
+        <div class="col-6 col-md-3">
+            <img src="assets/images/portfolio/design-album-2.png" 
+                 class="img-fluid rounded animate__animated animate__zoomIn" 
+                 alt="Graphic Design 4">
+        </div>
+        <div class="col-6 col-md-3">
+            <img src="assets/images/portfolio/design-ui-1.png" 
+                 class="img-fluid rounded animate__animated animate__zoomIn" 
+                 alt="Graphic Design 4">
+        </div>
+        <div class="col-6 col-md-3">
+            <img src="assets/images/portfolio/design-ui-2.png" 
+                 class="img-fluid rounded animate__animated animate__zoomIn" 
+                 alt="Graphic Design 4">
+        </div>
+        <div class="col-6 col-md-3">
+            <img src="assets/images/portfolio/design-other-1.png" 
+                 class="img-fluid rounded animate__animated animate__zoomIn" 
+                 alt="Graphic Design 4">
+        </div>
+        <div class="col-6 col-md-3">
+            <img src="assets/images/portfolio/design-other-2.png" 
+                 class="img-fluid rounded animate__animated animate__zoomIn" 
+                 alt="Graphic Design 4">
+        </div>
+        <div class="col-6 col-md-3">
+            <img src="assets/images/portfolio/design-other-3.png" 
+                 class="img-fluid rounded animate__animated animate__zoomIn" 
+                 alt="Graphic Design 4">
+        </div>
+    </div>
+</section>
+
+
     </main>
 
     <!-- Footer -->
@@ -257,8 +444,8 @@
                             <i class="fab fa-linkedin-in"></i>
                         </div>
                         <p class="contact-text ms-3">
-                            <a href="https://eg.linkedin.com/in/mohamed-bakr-702966291"
-                                target="_blank">mohamed-bakr-702966291</a>
+                            <a href="https://www.linkedin.com/in/mohamed-bakr-546b44391/"
+                                target="_blank">mohamed-bakr-546b44391</a>
                         </p>
                     </div>
 
