--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="games/index.html">Games</a></li>
                 </ul>
 
                 <a href="#section-contact" class="btn btn-custom rounded-pill"><i
