--- a/games/index.html
+++ b/games/index.html
@@ -197,7 +197,30 @@
                                 </p>
                                 <div class="game-badges">
                                     <span class="badge bg-primary rounded-pill">Play Now</span>
-                                    <span class="badge bg-light text-dark border">New Release</span>
+                                    <span class="badge bg-light text-dark border">Social</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <!-- GAME ITEM 3: TINY SPY -->
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <a href="tinyspy.html" class="game-card">
+                            <div class="game-thumb-wrapper">
+                                <!-- TIP: Add a real image here like: src="../assets/images/games/tinyspy.jpg" -->
+                                <img src="https://placehold.co/600x400/333333/ffffff?text=Tiny+Spy" alt="Tiny Spy">
+                                <div class="play-overlay">
+                                    <i class="fas fa-play-circle fa-3x text-white"></i>
+                                </div>
+                            </div>
+                            <div class="game-card-body">
+                                <h3 class="game-title">Tiny Spy</h3>
+                                <p class="game-desc">
+                                    A stealthy adventure. Sneak through levels, solve puzzles, and uncover secrets in this compact spy mission.
+                                </p>
+                                <div class="game-badges">
+                                    <span class="badge bg-primary rounded-pill">Play Now</span>
+                                    <span class="badge bg-light text-dark border">Stealth / Puzzle</span>
                                 </div>
                             </div>
                         </a>
