--- a/games/index.html
+++ b/games/index.html
@@ -307,6 +307,29 @@
                         </a>
                     </div>
 
+                    <!-- GAME ITEM 5: THE PACT ETERNAL -->
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <a href="thepacteternal.html" class="game-card">
+                            <div class="game-thumb-wrapper">
+                                <!-- Dark Gray Image -->
+                                <img src="https://placehold.co/600x400/333333/ffffff?text=THE+PACT+ETERNAL" alt="The Pact Eternal">
+                                <div class="play-overlay">
+                                    <i class="fas fa-play-circle fa-3x text-white"></i>
+                                </div>
+                            </div>
+                            <div class="game-card-body">
+                                <h3 class="game-title">The Pact Eternal</h3>
+                                <p class="game-desc">
+                                    An interactive game for couples. Navigate through choices on important topics and explore how your decisions align.
+                                </p>
+                                <div class="game-badges">
+                                    <span class="badge badge-play">Play Now</span>
+                                    <span class="badge badge-tag">Couples</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </section>
