--- a/games/index.html
+++ b/games/index.html
@@ -330,6 +330,29 @@
                         </a>
                     </div>
 
+                    <!-- GAME ITEM 6: ISEKAI GUILD (NEW) -->
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <a href="isekaiGuild.html" class="game-card">
+                            <div class="game-thumb-wrapper">
+                                <!-- Dark Gray Image -->
+                                <img src="https://placehold.co/600x400/333333/ffffff?text=ISEKAI+GUILD" alt="Isekai Guild">
+                                <div class="play-overlay">
+                                    <i class="fas fa-play-circle fa-3x text-white"></i>
+                                </div>
+                            </div>
+                            <div class="game-card-body">
+                                <h3 class="game-title">Isekai Guild</h3>
+                                <p class="game-desc">
+                                    A relaxing idle management game. Run a fantasy guild, manage staff, upgrade your base, and enjoy evening shifts at home.
+                                </p>
+                                <div class="game-badges">
+                                    <span class="badge badge-play">Play Now</span>
+                                    <span class="badge badge-tag">Idle</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </section>
