--- a/games/index.html
+++ b/games/index.html
@@ -353,6 +353,29 @@
                         </a>
                     </div>
 
+                    <!-- GAME ITEM 7: LOVESYNC (NEW) -->
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <a href="loveSync.html" class="game-card">
+                            <div class="game-thumb-wrapper">
+                                <!-- Soft Pink Image -->
+                                <img src="https://placehold.co/600x400/ff66a3/ffffff?text=LOVESYNC" alt="LoveSync">
+                                <div class="play-overlay">
+                                    <i class="fas fa-play-circle fa-3x text-white"></i>
+                                </div>
+                            </div>
+                            <div class="game-card-body">
+                                <h3 class="game-title">LoveSync</h3>
+                                <p class="game-desc">
+                                    A romantic story-driven experience. Build connections, make meaningful choices, and discover your perfect sync.
+                                </p>
+                                <div class="game-badges">
+                                    <span class="badge badge-play">Play Now</span>
+                                    <span class="badge badge-tag">Romance</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </section>
